--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@definejs/packer",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "pack definejs modules as a single file for browser.",
   "main": "index.js",
-  "bin": {
-  },
+  "bin": {},
   "author": "definejs",
   "license": "MIT",
   "repository": {
@@ -12,6 +11,7 @@
     "url": "https://github.com/definejs/packer.git"
   },
   "dependencies": {
+    "@definejs/date": "^0.1.5",
     "@definejs/directory": "^0.1.4",
     "@definejs/file": "^0.1.5",
     "@definejs/fn": "^0.1.3",
